# arbitra

./: .env.example  .gitignore  AI_AGENT_24_7_GUIDE.md  AI_AGENT_SETUP.md  AI_TRADING_UI_FEATURES.md  CHANGELOG.md  INSTALLATION.md  Makefile  PAPER_TRADING_README.md  PROJECT_SUMMARY.md  Package.swift  QUICKSTART.md  QUICK_START.md  README.md  SWIFT_APP_UPDATES.md  TROUBLESHOOTING.md  WELCOME.md  api_stub.py  demo_trading.py  install.sh  podman-compose.yml  pyproject.toml  requirements.txt  run-app.sh  run_tests.sh  setup-backend.sh  setup-xcode.sh  setup.py  setup.sh  start-server.sh  strategy.jsx  test-api.sh  test_alpaca_connection.py
.build/: debug.yaml
ArbitraApp/: AppDelegate.swift  ArbitraApp.swift  IMPLEMENTATION.md  README.md
ArbitraApp/Models/: AIModels.swift  APIResponseModels.swift  AppState.swift  ConnectionState.swift  Portfolio.swift  PortfolioState.swift
ArbitraApp/Services/: AITradingService.swift  APIService.swift
ArbitraApp/Utilities/: FormatHelpers.swift
ArbitraApp/ViewModels/: AITradingViewModel.swift
ArbitraApp/Views/: AITradingView.swift  ContentView.swift  DashboardView.swift  (+4 more)
backend/: main.py  requirements.txt
config/: ai.env.example  risk.yaml
docs/: AI_ENGINE.md  ARCHITECTURE.md  BUILD_FIXES.md  ENHANCEMENTS.md  ENHANCEMENT_SUMMARY.md  FIX_IMPORTS.md  MARKET_DATA_PROVIDERS.md  NEXT_STEPS.md  PAPER_TRADING_PLAN.md  PHASE2_TESTING.md  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_ENHANCEMENTS.md  ROOT_README.md  RUNNING.md  START_HERE.md  STATUS.md  VISUAL_GUIDE.md  architecture.jsx
src/: __init__.py
tests/: conftest.py
(+578 files in other folders)
